feat: change img style

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,9 @@
 <style>
   body{
     margin: 0px;
+    background-color: white !important;
   }
+  img[src=""],img:not([src]){opacity:0;}
       .skeleton {
         text-align: center;
         background-color: black;
